# ZentryDB

./: Cargo.toml  Readme.md
src/: db.rs  lib.rs  main.rs
src/index/: btree.rs  mod.rs
src/install/: install.rs  mod.rs
src/interface/: Readme.md
src/interface/cli/: mod.rs  tabled_rowtype.rs
src/model/: types.rs
src/storage/: accounts.rs  binary.rs  conversion_graphs.rs  entries.rs  mod.rs  systems.rs  transactions.rs
src/storage/layout/: bin_layout.rs  mod.rs
src/util/: uuid.rs
