[package]
name = "zentry_db"
version = "0.0.1"
edition = "2021"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.18"
bimap = "0.3.0"
rustyline = "13.0.0"
colored = "2.1"
tabled = "0.15"